[package]
name = "bevy_script_api"
version = "0.2.1"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Bevy API for multiple script languages, part of bevy_mod_scripting."
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua","rhai"]
categories = ["game-development"]
readme = "readme.md"

[package.metadata.release]
pre-release-replacements = [
    {file="Cargo.toml", search='^version\s*=\s*.*$', replace="version = \"{{version}}\"", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_derive\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_core\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_lua\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_lua_derive\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_rhai\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
]

[features]
lua = ["bevy_mod_scripting_lua","bevy_mod_scripting_lua_derive"]
rhai = ["bevy_mod_scripting_rhai"]

[dependencies]
bevy = { version = "0.9", default-features = false, features=["bevy_asset","bevy_gltf","bevy_animation","bevy_core_pipeline","bevy_ui","bevy_pbr","bevy_render","bevy_text","bevy_sprite","filesystem_watcher"]}
bevy_mod_scripting_derive = { path="../bevy_mod_scripting_derive", version = "0.2.1" }
bevy_mod_scripting_core = { path="../bevy_mod_scripting_core", version = "0.2.1" }
parking_lot="0.12.1"
paste="1.0.7"
thiserror="1.0.32"
# lua
bevy_mod_scripting_lua={path="../languages/bevy_mod_scripting_lua", version = "0.2.1", optional=true}
bevy_mod_scripting_lua_derive={path="../languages/bevy_mod_scripting_lua_derive", version = "0.2.1", optional=true}
bevy_mod_scripting_rhai={path="../languages/bevy_mod_scripting_rhai", version = "0.2.1", optional=true}
