[package]
name = "bevy_scripting"
version = "0.1.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Bevy plugin for enabling scripting"
repository = "https://github.com/makspll/bevy_scripting"
homepage = "https://github.com/makspll/bevy_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "../readme.md"

[lib]
name = "bevy_scripting"
path = "src/lib.rs"


[dependencies]
bevy = "0.7"
rlua = "0.19.1"
rhai = { version = "1.7.0", features = ["sync"] }
anyhow = "1.0.57"
beau_collector = "0.2.1"
once_cell = "1.10.0"
bevy_event_priority = { path = "../bevy_event_priority" }

[dev-dependencies]
bevy_console = { git = "https://github.com/makspll/bevy-console-bevy-0.7" }
bevy_asset_loader = {git = "https://github.com/NiklasEi/bevy_asset_loader", features = ["dynamic_assets"]}


[[example]]
name = "console_integration_lua"
path = "examples/console_integration_lua.rs"


[[example]]
name = "console_integration_rhai"
path = "examples/console_integration_rhai.rs"

[[example]]
name = "unity_game_loop"
path = "examples/unity_game_loop.rs"