[package]
name = "bevy_mod_scripting_codegen"
version = "0.6.0"
edition = "2024"
description = "Code generator tool for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/makspll/bevy_mod_scripting"
readme = "readme.md"
include = [
    "readme.md",
    "/src",
    "/templates",
    "Cargo.bootstrap.toml",
    "build.rs",
    "rust-toolchain.toml",
]

[workspace]
members = ["crates/crate_feature_graph"]
exclude = [
    "crates/test_crates/workspace/root",
    "crates/test_crates/workspace/crate_a",
    "crates/test_crates/workspace/crate_b",
]

[[bin]]
name = "cargo-bms-codegen"
path = "src/bin/main.rs"

[[bin]]
name = "bms-codegen-driver"
path = "src/bin/driver.rs"

[profile.ephemeral-build]
inherits = "dev"
opt-level = 2
codegen-units = 8
incremental = false
debug = false


[package.metadata.rust-analyzer]
rustc_private = true

[workspace.dependencies]
crate_feature_graph = { path = "crates/crate_feature_graph", version = "0.1" }
petgraph = { version = "0.8" }
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.4"
indexmap = "2"
cargo_metadata = "0.18"
serde_json = "1"
serde = "1"
clap = { version = "4", features = ["derive", "string"] }
tera = { version = "1", default-features = false }
strum = { version = "0.26", features = ["derive"] }
include_dir = "0.7"
prettyplease = "0.2"
convert_case = "0.6"
syn = { version = "2", features = ["parsing"], default-features = false }
itertools = "0.12"
chrono = "0.4"
pretty_assertions = "1.3"

[dependencies]
crate_feature_graph = { workspace = true, features = ["dot_parser", "serde"] }
clap = { workspace = true }
tera = { workspace = true }
strum = { workspace = true }
include_dir = { workspace = true }
syn = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
# env_logger = { workspace = true }
pretty_env_logger = { workspace = true }
indexmap = { workspace = true }
cargo_metadata = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
prettyplease = { workspace = true }
convert_case = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
toml = "0.8"
