[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false


[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
strum = { version = "0.26", features = ["derive"] }
anyhow = "1"
pretty_env_logger = "0.5"
log = "0.4"
itertools = "0.14"
cargo_metadata = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
toml = "0.8"
tera = "1.20"
json_comments = "0.2"
is-root = "0.1"
indexmap = { version = "2", features = ["serde"] }
