[package]
name = "bevy_api_gen"
version = "0.6.0"
edition = "2021"
description = "Code generator tool for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/makspll/bevy_mod_scripting"
readme = "readme.md"
include = [
    "readme.md",
    "/src",
    "/templates",
    "Cargo.bootstrap.toml",
    "build.rs",
    "rust-toolchain.toml",
]

[[bin]]
name = "cargo-bevy-api-gen"
path = "src/bin/main.rs"

[[bin]]
name = "bevy-api-gen-driver"
path = "src/bin/driver.rs"


[rust-analyzer.rustc]
source = "discover"

[package.metadata.rust-analyzer]
rustc_private = true

[rust-analyzer.check]
overrideCommand = ["cargo", "+nightly-2024-01-24", "a", "--message-format=json"]


[dependencies]
log = "0.4"
env_logger = "0.11"
rustc_plugin = "=0.9.0-nightly-2024-01-24"
indexmap = "2"
tempdir = "0.3"
cargo_metadata = "0.18"
rustc_data_structures = "0.0.1"
serde_json = "1"
serde = "1"
clap = { version = "4", features = ["derive", "string"] }
tera = { version = "1", default-features = false }
strum = { version = "0.26", features = ["derive"] }
include_dir = "0.7"
prettyplease = "0.2"
convert_case = "0.6"
syn = { version = "2", features = ["parsing"], no-default-features = true }
clap-verbosity-flag = "2.2"
itertools = "0.12"

[build-dependencies]
toml = "0.8"

[workspace]
