[package]
name = "bevy_api_gen"
version = "0.6.0"
edition = "2021"
description = "Code generator tool for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/makspll/bevy_mod_scripting"
readme = "readme.md"
include = [
    "readme.md",
    "/src",
    "/templates",
    "Cargo.bootstrap.toml",
    "build.rs",
    "rust-toolchain.toml",
]

[[bin]]
name = "cargo-bevy-api-gen"
path = "src/bin/main.rs"

[[bin]]
name = "bevy-api-gen-driver"
path = "src/bin/driver.rs"

[profile.ephemeral-build]
inherits = "dev"
opt-level = 2
codegen-units = 8
incremental = false
debug = false


[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
log = "0.4"
env_logger = "0.11"
rustc_plugin = "0.12.0-nightly-2024-12-15"
indexmap = "2"
cargo_metadata = "0.18"
serde_json = "1"
serde = "1"
clap = { version = "4", features = ["derive", "string"] }
tera = { version = "1", default-features = false }
strum = { version = "0.26", features = ["derive"] }
include_dir = "0.7"
prettyplease = "0.2"
convert_case = "0.6"
syn = { version = "2", features = ["parsing"], default-features = false }
itertools = "0.12"
chrono = "0.4"

[build-dependencies]
toml = "0.8"
