[package]
name = "bevy_event_priority"
version = "0.7.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin providing priority based event handling"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"


[lib]
name = "bevy_event_priority"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true, default-features = false }
