[package]
name = "bevy_mod_scripting_asset"
version = "0.15.1"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core traits and structures required for other parts of bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
categories = ["game-development"]
readme = "readme.md"


[dependencies]
bevy_reflect = { workspace = true }
bevy_asset = { workspace = true }
bevy_log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
[lints]
workspace = true
