[package]
name = "bevy_mod_scripting_bindings"
version = "0.15.1"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core traits and structures required for other parts of bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
categories = ["game-development"]
readme = "readme.md"


[dependencies]
bevy_mod_scripting_asset = { workspace = true }
bevy_mod_scripting_derive = { workspace = true }
bevy_mod_scripting_display = { workspace = true }
bevy_system_reflection = { workspace = true }
bevy_diagnostic = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_log = { workspace = true }
bevy_app = { workspace = true }
bevy_platform = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
itertools = { workspace = true }
profiling = { workspace = true }
bevy_asset = { workspace = true }
variadics_please = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test_utils = { workspace = true }

[lints]
workspace = true
