[package]
name = "bevy_mod_scripting_core"
version = "0.15.1"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core traits and structures required for other parts of bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"

[lib]
name = "bevy_mod_scripting_core"
path = "src/lib.rs"

[features]
default = []
# if enabled enables documentation updating in optimized builds
doc_always = []


[dependencies]
bevy_mod_scripting_derive = { workspace = true }
bevy_mod_scripting_asset = { workspace = true }
bevy_mod_scripting_bindings = { workspace = true }
bevy_system_reflection = { workspace = true }
bevy_mod_scripting_display = { workspace = true }

bevy_reflect = { workspace = true, default-features = false, features = [] }
bevy_ecs = { workspace = true, default-features = false, features = [] }
bevy_app = { workspace = true, default-features = false, features = [] }
bevy_log = { workspace = true, default-features = false, features = [] }
bevy_asset = { workspace = true, default-features = false, features = [] }
bevy_diagnostic = { workspace = true, default-features = false, features = [] }
bevy_platform = { workspace = true, default-features = false, features = [] }

parking_lot = { workspace = true }
smallvec = { workspace = true }
itertools = { workspace = true }
profiling = { workspace = true }
fixedbitset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
variadics_please = { workspace = true }

[dev-dependencies]
test_utils = { workspace = true }
pretty_assertions = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
