[package]
name = "bevy_mod_scripting_derive"
description = "Necessary functionality for Lua support with bevy_mod_scripting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
syn = { workspace = true, features = [
    "full",
    "parsing",
    "derive",
    "printing",
    "proc-macro",
    "clone-impls",
] }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[lib]
proc-macro = true

[lints]
workspace = true
