[package]
name = "bevy_mod_scripting_display"
version = "0.15.1"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Necessary functionality for Lua support with bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "rhai"]
categories = ["game-development"]
readme = "readme.md"

[dependencies]
bevy_reflect = { workspace = true }
bevy_ecs = { workspace = true, features = ["bevy_reflect"] }
bevy_platform = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
