[package]
name = "bevy_mod_scripting_functions"
version = "0.15.1"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Necessary functionality for Lua support with bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "rhai"]
categories = ["game-development"]
readme = "readme.md"

[features]
bevy_a11y = []
bevy_animation = []
bevy_asset = []
bevy_color = []
bevy_core_pipeline = []
bevy_ecs = []
bevy_input = ["dep:bevy_input"]
bevy_math = ["dep:bevy_math", "dep:glam"]
bevy_reflect = ["dep:bevy_reflect", "dep:glam", "dep:uuid", "dep:smol_str"]
bevy_time = ["dep:bevy_time"]
bevy_transform = ["dep:bevy_transform"]

core_functions = []
lua_bindings = ["bevy_mod_scripting_lua"]
rhai_bindings = ["bevy_mod_scripting_rhai"]


[dependencies]
bevy_ecs = { workspace = true, features = ["std", "bevy_reflect"] }
bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_platform = { workspace = true, features = ["std"] }
bevy_input = { workspace = true, optional = true, features = [
    "std",
    "bevy_reflect",
] }
bevy_math = { workspace = true, features = [
    "std",
    "rand",
    "curve",
], optional = true }
bevy_reflect = { workspace = true, features = [
    "smol_str",
    "glam",
    "uuid",
    "std",
    "debug_stack",
], optional = true }
uuid = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true, features = [
    "std",
    "bevy_reflect",
] }
bevy_transform = { workspace = true, optional = true, features = [
    "bevy_reflect",
    "std",
    "bevy-support",
] }
glam = { workspace = true, optional = true, features = ["serde", "std"] }


profiling = { workspace = true }

bevy_mod_scripting_core = { workspace = true }
bevy_mod_scripting_derive = { workspace = true }
bevy_mod_scripting_lua = { path = "../languages/bevy_mod_scripting_lua", optional = true, version = "0.15.1" }
bevy_mod_scripting_rhai = { path = "../languages/bevy_mod_scripting_rhai", optional = true, version = "0.15.1" }
bevy_system_reflection = { path = "../bevy_system_reflection", version = "0.2.0" }

[lints]
workspace = true
