[package]
name = "bevy_mod_scripting_functions"
version = "0.15.1"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Necessary functionality for Lua support with bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "rhai"]
categories = ["game-development"]
readme = "readme.md"

[features]
bevy_a11y = ["dep:bevy_a11y"]
bevy_animation = ["dep:bevy_animation"]
bevy_asset = []
bevy_color = ["dep:bevy_color"]
bevy_core_pipeline = ["dep:bevy_core_pipeline"]
bevy_ecs = []
bevy_gizmos = ["dep:bevy_gizmos"]
bevy_gltf = ["dep:bevy_gltf"]
bevy_image = ["dep:bevy_image"]
bevy_input = ["dep:bevy_input"]
bevy_input_focus = ["dep:bevy_input_focus"]
bevy_math = ["dep:bevy_math", "dep:glam"]
bevy_mesh = ["dep:bevy_mesh"]
bevy_pbr = ["dep:bevy_pbr"]
bevy_picking = ["dep:bevy_picking"]
bevy_reflect = ["dep:bevy_reflect", "dep:glam", "dep:uuid", "dep:smol_str"]
bevy_render = ["dep:bevy_render"]
bevy_scene = ["dep:bevy_scene"]
bevy_sprite = ["dep:bevy_sprite"]
bevy_text = ["dep:bevy_text"]
bevy_time = ["dep:bevy_time"]
bevy_transform = ["dep:bevy_transform"]
bevy_window = ["dep:bevy_window"]
bevy_winit = ["dep:bevy_winit"]

core_functions = []
lua_bindings = ["bevy_mod_scripting_lua"]
rhai_bindings = ["bevy_mod_scripting_rhai"]


[dependencies]
bevy_ecs = { workspace = true, features = ["std", "bevy_reflect"] }
bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_platform = { workspace = true, features = ["std"] }
bevy_input = { workspace = true, optional = true, features = [
    "std",
    "bevy_reflect",
] }
bevy_math = { workspace = true, features = [
    "std",
    "rand",
    "curve",
], optional = true }
bevy_reflect = { workspace = true, features = [
    "smol_str",
    "glam",
    "uuid",
    "std",
    "debug_stack",
], optional = true }
uuid = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true, features = [
    "std",
    "bevy_reflect",
] }
bevy_transform = { workspace = true, optional = true, features = [
    "bevy_reflect",
    "std",
    "bevy-support",
] }
glam = { workspace = true, optional = true, features = ["serde", "std"] }
bevy_a11y = { version = "0.16.0", default-features = false, optional = true }
bevy_animation = { version = "0.16.0", default-features = false, optional = true }
bevy_color = { version = "0.16.0", default-features = false, optional = true }
bevy_core_pipeline = { version = "0.16.0", default-features = false, optional = true }
bevy_gizmos = { version = "0.16.0", default-features = false, optional = true, features = [
    "bevy_render",
] }
bevy_gltf = { version = "0.16.0", default-features = false, optional = true }
bevy_image = { version = "0.16.0", default-features = false, optional = true }
bevy_input_focus = { version = "0.16.0", default-features = false, optional = true }
bevy_mesh = { version = "0.16.0", default-features = false, optional = true }
bevy_pbr = { version = "0.16.0", default-features = false, optional = true }
bevy_picking = { version = "0.16.0", default-features = false, optional = true, features = [
    "bevy_mesh_picking_backend",
] }
bevy_render = { version = "0.16.0", default-features = false, optional = true }
bevy_scene = { version = "0.16.0", default-features = false, optional = true }
bevy_sprite = { version = "0.16.0", default-features = false, optional = true, features = [
    "bevy_sprite_picking_backend",
] }
bevy_text = { version = "0.16.0", default-features = false, optional = true }
bevy_window = { version = "0.16.0", default-features = false, optional = true, features = [
    "custom_cursor",
] }
bevy_winit = { version = "0.16.0", default-features = false, optional = true }

profiling = { workspace = true }

bevy_mod_scripting_core = { workspace = true }
bevy_mod_scripting_derive = { workspace = true }
bevy_mod_scripting_lua = { path = "../languages/bevy_mod_scripting_lua", optional = true, version = "0.15.1" }
bevy_mod_scripting_rhai = { path = "../languages/bevy_mod_scripting_rhai", optional = true, version = "0.15.1" }
bevy_system_reflection = { path = "../bevy_system_reflection", version = "0.2.0" }

[lints]
workspace = true
