[package]
name = "bevy_mod_scripting_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_platform = { workspace = true }
bevy_reflect = { workspace = true }
# bevy_mod_scripting_script = { workspace = true }
# bevy_mod_scripting_display = { workspace = true }
profiling = { workspace = true, features = [
    "procmacros",
] }
parking_lot = { workspace = true }
smallvec = { workspace = true }
fixedbitset = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
[lints]
workspace = true
