[package]
name = "bevy_script_api"
version = "0.8.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy API for multiple script languages, part of bevy_mod_scripting."
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua", "rhai"]
categories = ["game-development"]
readme = "readme.md"

[features]
lua = ["bevy_mod_scripting_lua", "bevy_mod_scripting_lua_derive"]
rhai = ["bevy_mod_scripting_rhai"]

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_animation",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_sprite",
    "file_watcher",
    "multi_threaded",
] }
uuid = "1.10"
bevy_mod_scripting_core = { workspace = true }
parking_lot = "0.12.1"
paste = "1.0.7"
thiserror = "1.0.32"
# lua
bevy_mod_scripting_lua = { path = "../languages/bevy_mod_scripting_lua", version = "0.8.0", optional = true }
bevy_mod_scripting_lua_derive = { path = "../languages/bevy_mod_scripting_lua_derive", version = "0.8.0", optional = true }
bevy_mod_scripting_rhai = { path = "../languages/bevy_mod_scripting_rhai", version = "0.8.0", optional = true }
smol_str = "0.2"
allocator-api2 = "0.2"
