[package]
name = "bevy_script_api_providers"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_scripting_core = { workspace = true }
bevy_mod_scripting_lua = { path = "../languages/bevy_mod_scripting_lua", version = "0.5.0" }
bevy_mod_scripting_lua_derive = { path = "../languages/bevy_mod_scripting_lua_derive", version = "0.5.0" }
bevy = { workspace = true, default-features = false }
