[package]
name = "bevy_system_reflection"
version = "0.2.0"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for reflecting systems, schedules, system sets and rendering schedules"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_log"]}
dot-writer = "0.1.4"


[dev-dependencies]
pretty_assertions = "1.4"
manifest-dir-macros = "0.1.18"
[lints]
workspace = true
