[package]
name = "bevy_system_reflection"
version = "0.3.0"
edition = "2024"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for reflecting systems, schedules, system sets and rendering schedules"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"

[dependencies]
bevy_ecs = { workspace = true, default-features = false, features = [] }
bevy_reflect = { workspace = true, default-features = false, features = [] }
bevy_platform = { workspace = true, default-features = false, features = [] }
bevy_log = { workspace = true, default-features = false, features = [] }
dot-writer = { workspace = true }


[dev-dependencies]
bevy_app = { workspace = true, default-features = false, features = [] }
pretty_assertions = { workspace = true }
manifest-dir-macros = { workspace = true }

[lints]
workspace = true
